[tool.poetry]
name = "ai-chat-room-langgraph"
version = "0.1.0"
description = "build ai chat-room easily"
authors = ["daniel ogunlolu <danielogunlolu98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
langgraph = "^0.0.30"
pytelegrambotapi = "^4.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
