[tool.poetry]
name = "ai-chat-room-langgraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.70"
langgraph-sdk = "^0.1.51"
langgraph-checkpoint-sqlite = "^2.0.3"
langsmith = "^0.3.8"
langchain-community = "^0.3.17"
langchain-core = "^0.3.34"
langchain-openai = "^0.3.4"
notebook = "^7.3.2"
tavily-python = "^0.5.1"
wikipedia = "^1.4.0"
trustcall = "^0.0.35"
langgraph-cli = "^0.1.71"
streamlit = "^1.42.0"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.3.4"
langchain-ollama = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
